# Linux_RFAL_st25r3916_v2.2.0

./: CMakeLists.txt  readme.txt  readme_cross_compilation.txt
linux_demo/: CMakeLists.txt  toolchain_arm-linux-gnueabihf.cmake
linux_demo/demo/: CMakeLists.txt
linux_demo/demo/Inc/: logger.h
linux_demo/demo/Src/: logger.c  main.c  rfal_analog_config_custom.c
linux_demo/platform/Inc/: pltf_gpio.h  pltf_spi.h  pltf_timer.h
linux_demo/platform/Inc/st25r3916/: platform.h
linux_demo/platform/Src/: pltf_gpio.c  pltf_spi.c  pltf_timer.c
linux_demo/rfal/st25r3916/: CMakeLists.txt
st25r_demos/Inc/: demo.h
st25r_demos/Src/: demo_ce.c  demo_polling.c
